# Linki-Agent-I

./: .env.example  .gitignore  README.md  pyproject.toml
.linki/: hooks.json
.linki/hooks/: auto_format.py  bash_guard.py  protect_secrets.py
src/: cell.js
src/Linki/: __init__.py  __main__.py
src/Linki/agents/: __init__.py  code_agent.py  registry.py  search_agent.py
src/Linki/cli/: __init__.py  app.py
src/Linki/core/: __init__.py  agent.py  approval.py  checkpoint.py  compact.py  context.py  frontmatter.py  hooks.py  memory_store.py  paths.py  session.py  state.py  trace.py
src/Linki/graph/: __init__.py  memory.py  nodes.py  state.py  workflow.py
src/Linki/prompts/: __init__.py  compact.py  coordinator.py  memory.py  stage2.py  stage3.py  stage4.py
src/Linki/providers/: __init__.py  openai_provider.py
src/Linki/skills/: __init__.py  registry.py
src/Linki/swarm/: __init__.py  board.py  mailbox.py  scheduler.py
src/Linki/tools/: __init__.py  agent_tool.py  ask_user_tool.py  bash_tool.py  executor.py  file_tools.py  grep_tool.py  memory_tools.py  notepad_tool.py  plan_tools.py  registry.py  (+2 more)
tests/: test_agent_dispatch.py  test_agents.py  test_ask_user_tool.py  test_cli_event_rendering.py  test_compact.py  test_context.py  test_coordinator.py  test_final_answer.py  test_hooks.py  test_memory_store.py  test_plan_tools.py  test_planner_summary.py  test_provider_preflight.py  test_skills.py  test_swarm.py  test_trace.py  test_tui_approval.py  test_tui_commands.py  test_tui_compact_command.py  test_tui_memory_command.py  test_tui_status_panel.py
(+8 files in other folders)
