[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Linki"
version = "0.1.0"
description = "A Typer CLI agent scaffold with workspace-restricted tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "pydantic>=2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.8",
    "tavily-python>=0.5",
    "textual>=0.80",
    "typer>=0.12",
]

[project.scripts]
Linki = "Linki.cli.app:run"
linki = "Linki.cli.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/Linki"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
